# standalone_trt_infer

./: .gitignore  CMakeLists.txt  README.md  sample_1080p_056.png.txt  yolov5s_TRT_infer.cpp
